--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendra-science/api-hooks-common",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Useful hooks for use with Dendra/Feathers API services.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
@@ -28,21 +28,24 @@
   },
   "dependencies": {
     "@dendra-science/utils": "1.0.0",
-    "feathers-hooks-common": "^4.20.2"
+    "feathers-hooks-common": "^4.20.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "chai": "^4.2.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^5.2.0",
-    "mongodb": "^3.1.13"
+    "mocha": "^6.1.4",
+    "mongodb": "^3.2.4",
+    "prettier": "^1.17.0"
   },
   "optionalDependencies": {}
 }
