--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendra-science/api-hooks-common",
-  "version": "2.0.1",
+  "version": "2.5.0",
   "description": "Useful hooks for use with Dendra/Feathers API services.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
@@ -24,28 +24,29 @@
     "test:watch": "chokidar --initial 'src/**/*.js' 'test/**/*.js' -c 'npm run test:build'"
   },
   "engines": {
-    "node": ">=10.15.1"
+    "node": ">=12.14.x"
   },
   "dependencies": {
-    "@dendra-science/utils": "1.0.0",
-    "feathers-hooks-common": "^4.20.7"
+    "@dendra-science/utils": "2.5.0",
+    "feathers-hooks-common": "^5.0.4",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.2.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^6.2.2",
+    "mocha": "^8.1.3",
     "mongodb": "^3.3.3",
-    "prettier": "^1.18.2"
+    "prettier": "^2.1.1"
   },
   "optionalDependencies": {}
 }
